Blindly fetch all submodules in regressions
If you have a situation where a user has ROCKETCHIP_ADDONS that are
not submodules, but are included as explicit subdirectories in a
branch, the regressions will fail trying to checkout a non-existent
submodule. Since riscv-tools/rocket-tools is now NOT a submodule, it
should be safe to do an explicit clone of all submodules without
filtering to the hardware-specific ones.

Signed-off-by: Schuyler Eldridge <schuyler.eldridge@ibm.com>

--- a/regression/Makefile
+++ b/regression/Makefile
@@ -126,12 +126,10 @@ vsim-bmark-tests: $(VSIM_BMARK_TEST_STAMPS)
 vsim-regression-tests: $(VSIM_REGRESSION_TEST_STAMPS)
 vsim-torture: $(VSIM_TORTURE_STAMPS)
 
-submodule_names = chisel3 firrtl torture hardfloat $(ROCKETCHIP_ADDONS)
-
 # Checks out all the rocket-chip submodules
 stamps/other-submodules.stamp:
 	mkdir -p $(dir $@)
-	git -C $(abspath $(TOP)) submodule update --init --recursive $(submodule_names)
+	git -C $(abspath $(TOP)) submodule update --init --recursive
 	date > $@
 
 stamps/rocket-tools_checkout.stamp:
